--- a/example/index.hbs
+++ b/example/index.hbs
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    Hello, world!
-  </body>
-</html>
+---
+layout: default
+---
+
+Hello, world!
