Update the example site

--- a/example/_layouts/default.hbs
+++ b/example/_layouts/default.hbs
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>{{#if @page.title}}{{@page.title}}{{else}}{{@site.title}}{{/if}}</title>
   </head>
   <body>
     {{> header}}
