--- a/example/index.hbs
+++ b/example/index.hbs
@@ -2,4 +2,14 @@
 layout: default
 ---
 
-Hello, world!
+Posts:
+
+<ul>
+  <li><a href="/2016/01/12/welcome/">Welcome</a></li>
+</ul>
+
+Pages:
+
+<ul>
+  <li><a href="/about/">About</a></li>
+</ul>
