Add some Sass stylesheets

--- a/example/_layouts/default.hbs
+++ b/example/_layouts/default.hbs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{#if @page.title}}{{@page.title}}{{else}}{{@site.title}}{{/if}}</title>
+    <link href="/css/main.css" rel="stylesheet">
   </head>
   <body>
     {{> header}}
