--- a/example/_layouts/default.hbs
+++ b/example/_layouts/default.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{#if @page.title}}{{@page.title}}{{else}}{{@site.title}}{{/if}}</title>
+    <title>{{#if @current.title}}{{@current.title}}{{else}}{{@site.title}}{{/if}}</title>
     <link href="{{fullpath '/css/main.css'}}" rel="stylesheet">
   </head>
   <body>
