--- a/example/_layouts/default.hbs
+++ b/example/_layouts/default.hbs
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>{{#if @current.title}}{{@current.title}}{{else}}{{@site.title}}{{/if}}</title>
-    <link href="{{fullpath '/css/main.css'}}" rel="stylesheet">
+    <link rel="stylesheet" href="{{fullpath '/css/main.css'}}">
+    <link rel="canonical" href="{{permalink @current.path}}">
   </head>
   <body>
     {{> header}}
